apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
android {
    compileSdk 33
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "uk.org.openseizuredetector"
        minSdk 26
        targetSdk 33
        //minumum needed for androidx.wear:wear-phone-interactions:1.1.0-alpha03
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }

        debug {
            signingConfig signingConfigs.debug
            // just add debug build type to your watch build.gradle file as well
        }
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests {
            includeAndroidResources = true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildToolsVersion '33.0.0'
}

dependencies {
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation files('libs/mpandroidchartlibrary-2-0-7.jar')
    implementation 'com.getpebble:pebblekit:4.0.1@aar'
    // Unit testing dependencies
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.7.0'
    implementation 'com.google.firebase:firebase-auth:21.1.0'
    implementation 'androidx.test:core:1.5.0'
    implementation files('org.junit.Assert')
    testImplementation 'junit:junit:4.13.2'
    // Set this dependency if you want to use Mockito
    testImplementation 'org.mockito:mockito-core:4.9.0'
    // Set this dependency if you want to use Hamcrest matching
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    // google play services used for location finding for SMS alerts.
    //implementation 'com.google.android.gms:play-services:+'
    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
    implementation 'com.github.wendykierp:JTransforms:3.1'
    implementation 'com.google.android.gms:play-services-location:21.0.1'
    //implementation 'com.github.RohitSurwase.UCE-Handler:uce_handler:1.3'
    testImplementation 'org.robolectric:robolectric:4.9'
    implementation 'com.android.volley:volley:1.2.1'
    implementation platform('com.google.firebase:firebase-bom:31.1.0')
    implementation 'com.google.firebase:firebase-analytics:21.2.0'
    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
    implementation 'com.google.firebase:firebase-firestore:24.4.1'
    implementation 'androidx.work:work-runtime:2.7.1'
    //implementation compileOnly( 'com.google.android.support:wearable:2.9.0' )
    //implementation compileOnly( 'com.google.android.wearable:wearable:2.9.0')
    implementation "androidx.wear:wear:1.2.0"

    // Add support for wearable specific inputs
    implementation "androidx.wear:wear-input:1.1.0"
    implementation "androidx.wear:wear-input-testing:1.1.0"

    // Use to implement wear ongoing activities
    implementation "androidx.wear:wear-ongoing:1.0.0"

    // Use to implement support for interactions from the Wearables to Phones
    implementation 'androidx.wear:wear-phone-interactions:1.0.0'
    // Use to implement support for interactions between the Wearables and Phones
    implementation "androidx.wear:wear-remote-interactions:1.0.0"


}

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/groups/public/" }
}
